<resources>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_collector_log_in">CollectorLogInActivity</string>
    <string name="title_activity_collector_menu">CollectorMenuActivity</string>
    <string name="title_activity_artists">ArtistsActivity</string>
    <string name="app_name_text">Vinilos</string>
    <string name="visitor_text">Visitante</string>
    <string name="collector_text">Coleccionista</string>
    <string name="logo_content_description">Logo de la app Vinilos</string>
    <string name="title_activity_album_detail">AlbumDetailActivity</string>
    <string name="back_button_text">Dar atrás</string>
    <string name="song_text">Canción</string>
    <string name="duration_text">Duración</string>
...
