...
                item {
                    Text(
                        text = "No se encontraron álbumes para mostrar",
                        style = TextStyle(
                            fontSize = 18.sp,
                        ),
                        modifier = Modifier.testTag("AlbumListError")
                    )
                }
            }

        }
    }
...
